额外的rt目录对SpringBootFatJarClassLoader是多余的，移除